upload maps and plot

--- a/_posts/2019-04-18-overview.md
+++ b/_posts/2019-04-18-overview.md
@@ -6,6 +6,11 @@ categories:
 tags:
   - Github Page
   - update
+altair-loader:
+  zones_centers_map: "charts/zones_centers_map.json"
 ---
 
 Overview of the project.
+
+<div id="zones_centers_map"></div>
+
