--- a/_posts/2021-12-19-overview.md
+++ b/_posts/2021-12-19-overview.md
@@ -9,6 +9,7 @@ altair-loader:
   zones_centers_map: "charts/zones_centers_map.json"
   boros_hurricane_evac_centers_plot: "charts/boros_hurricane_evac_centers_plot.json"
 ---
+# Introduction
 
 For my final project, I was interested in exploring access to hurricane evacuation centers and social vulnerability factors in New York City. This analysis
 considered the following questions:
@@ -16,6 +17,8 @@ considered the following questions:
 evacuation centers?
 • Are centers in/near areas of high social vulnerability1? What does walkability look like for these populations?
 • What road networks in the event of major storm-related flooding will be impacted?
+
+## Context
 
 For context, the map below shows an overview of hurricane evacuation centers across the five NYC boroughs and hurricane evacuation zones (areas designated by the City as at risk of high inundation from hurricane-related flooding (1 = highest risk, 6 = lowest risk).
 <div id="zones_centers_map"></div>
