--- a/_posts/2021-12-22-overview.md
+++ b/_posts/2021-12-22-overview.md
@@ -1,10 +1,10 @@
 ---
 title: "Project Overview"
-date: 2021-12-19
-categories:
-  - blog
+date: 2021-12-22
 tags:
   - Overview
+excerpt: "Overview of the project and context."
+
 altair-loader:
   zones_centers_map: "charts/zones_centers_map.json"
 hv-loader:
@@ -23,8 +23,7 @@ evacuation centers?
 For context, the map below shows an overview of hurricane evacuation centers across the five NYC boroughs and hurricane evacuation zones (areas designated by the City as at risk of high inundation from hurricane-related flooding (1 = highest risk, 6 = lowest risk).
 <div id="zones_centers_map"></div>
 
-Across the five boroughs, there are 60 evacuation centers (based on the most up-to-date data available through NYC's Open Data portal). The distribution across the boroughs is shown on this bar graph.
+Across the five boroughs, there are 60 evacuation centers (based on the most up-to-date data available through NYC's Open Data portal). The distribution across the boroughs is shown on this bar graph. Brooklyn and Queens currently have the most centers within their boundaries (17 and 16, respectively).
 <div id="boros_hurricane_evac_centers_plot"></div>
-Brooklyn and Queens currently have the most centers within their boundaries (17 and 16, respectively).
 
 
