--- a/_posts/2021-12-19-mapping.md
+++ b/_posts/2021-12-19-mapping.md
@@ -3,14 +3,14 @@ title: "Mapping the Elements Together"
 date: 2021-12-19
 published: true
 tags: [dataviz, folium]
-excerpt: "AN interactive folium map allowing users to explore the different elements of this analysis and inform resource allocation decisions."
+excerpt: "An interactive folium map allowing users to explore the different elements of this analysis and inform resource allocation decisions."
 folium-loader:
   folium_map_master: ["charts/folium_map_master.html", "800", "800"]
 toc: false
 toc_sticky: false
 classes: wide
 ---
-This final map allows the user to explore the different facets of this analysis. By default, the map loads with the following layers (which can be toggled on/off using radio buttons in the layer contorl):
+This final map allows the user to explore the different facets of this analysis. By default, the map loads with the following layers (which can be toggled on/off using radio buttons in the layer control):
 * Highest risk hurricane evacuation zone (zone 1), shown as red polygons
 - Road inaccessibility during and after a hurricane will impact evacuations, so the additional overlay of hurricane evacuation zone 1 (the highest risk of flooding) as an additional overlay shows what pockets of the city will be impacted from inundation. 
 * Most accessible nodes for reaching an evacuation center, shown as black points
