--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -13,7 +13,7 @@ I used altair to create the contextual map and bar plot shown on the Project Ove
 
 
 ## Part 1
-Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/exploratory-analysis/).
+Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/).
 
 Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. 
 
@@ -23,7 +23,7 @@ I used a combination of altair and matplotlib for the various visualizations to 
 
 
 ## Part 2
-Page: [Evaluating Accessibility with a Pandas Network Analysis](https://jennaepstein.github.io/MUSA550-finalproject/accessibility-to-centers/)
+Page: [Evaluating Accessibility with a Pandas Network Analysis](https://jennaepstein.github.io/MUSA550-finalproject/part2-accessibility-to-centers/)
 
 Part 2 of this project centered around a [Pandana](http://udst.github.io/pandana/) network analysis to explore walking access to evacuation centers from each intersection. Main steps included:
 * Creating a pandanas network 
@@ -35,6 +35,7 @@ In order to construct the plots (both the static and the interactive versions), 
 - Merged coordinates of the network nodes with obtained distances to the nearest centers (meters)
 
 ## Part 3
+Page: [Mapping the Elements Together](https://jennaepstein.github.io/MUSA550-finalproject/part3-folium-map/)
 Using the results from parts 1 and 2, I then created a folium map using Folium to showing the centers and the walkable street network.
 The folium map includes a layer control toggle, allowing useres to switch between different overlays for population density and social vulnerability, as well as toggle on/off the base layers of hurricane evacuation zones (proxy for hurricane flooding and other stormwater-relate4d risks), and accessible nodes (a half mile or less from the nearest evacuation center).
 
