--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -9,15 +9,17 @@ This page goes through the process and methods used throughout this project.
 ## Project Overview
 Page: [Project Overview](https://jennaepstein.github.io/MUSA550-finalproject/overview/).
 
+The data for hurricane evacuation centers, hurricane evacuation zones, and NYC boroughs was downloaded from New York City's open data portal, [NYC OpenData](https://opendata.cityofnewyork.us/). I performed some spatial joins to associate boroughs with centers and zones.
+
 I used altair to create the contextual map and bar plot shown on the Project Overview page.
 
 
 ## Part 1
 Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/).
 
-Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. 
+Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using Cenpy. The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
 
-(census tract level).
+The social vulnerability data was downloaded from the CDC for New York State. I filtered the data down to the five counties (which correspond to the five boroughs) of New York City, performed much data cleanup, and joined this data with the census data based on unique census tract IDs.
 
 I used a combination of altair and matplotlib for the various visualizations to explore spatial relationships.
 
