--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -4,7 +4,7 @@ date: 2021-12-23
 excerpt: "Technical information about the methods used throughout the project."
 classes: wide
 ---
-This page goes through the process and methods used throughout this project.
+This page outlines the process and methods used throughout this project.
 
 ## Project Overview
 Page: [Project Overview](https://jennaepstein.github.io/MUSA550-finalproject/overview/).
@@ -17,7 +17,7 @@ I used altair to create the contextual map and bar plot shown on the Project Ove
 ## Part 1
 Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/).
 
-Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using Cenpy. The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
+Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using `Cenpy`. The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
 
 The social vulnerability data was downloaded from the CDC for New York State. I filtered the data down to the five counties (which correspond to the five boroughs) of New York City, performed much data cleanup, and joined this data with the census data based on unique census tract IDs.
 
@@ -38,6 +38,6 @@ In order to construct the plots (both the static and the interactive versions), 
 
 ## Part 3
 Page: [Mapping the Elements Together](https://jennaepstein.github.io/MUSA550-finalproject/part3-folium-map/)
-Using the results from parts 1 and 2, I then created a folium map using Folium to showing the centers and the walkable street network.
-The folium map includes a layer control toggle, allowing useres to switch between different overlays for population density and social vulnerability, as well as toggle on/off the base layers of hurricane evacuation zones (proxy for hurricane flooding and other stormwater-relate4d risks), and accessible nodes (a half mile or less from the nearest evacuation center).
+
+Using the results from parts 1 and 2, I then created a map using [Folium](https://python-visualization.github.io/folium/) to showing the centers and the walkable street network. The map includes a layer control toggle, allowing useres to switch between different overlays for population density and social vulnerability, as well as toggle on/off the base layers of hurricane evacuation zones (proxy for hurricane flooding and other stormwater-relate4d risks), and accessible nodes (a half mile or less from the nearest evacuation center).
 
