--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -17,7 +17,7 @@ I used altair to create the contextual map and bar plot shown on the Project Ove
 ## Part 1
 Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/)
 
-Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using `Cenpy`. The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
+Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using [Cenpy](http://cenpy-devs.github.io/cenpy/index.html). The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
 
 The CDC/ATSDR Social Vulnerability Index (SVI) uses 15 US Census variables to determine the social vulnerability of every census tract. The SVI can help public health officials, City personnel, and planners hel prepare for and resond to disaster events - like hurricanes and tropical storms.I therefore elected to use SVI data in this project since it already encompasses the demographic and socioeonimc variables in the Census that I sought to factor into my analysis. I downloaded the SVI data directly from the CDC for the entirety of New York State. I then filtered the data down to the five counties (which correspond to the five boroughs) of New York City, performed much data cleanup, and joined this data with the census data based on unique census tract IDs.
 
@@ -39,5 +39,7 @@ In order to construct the plots (both the static and the interactive versions), 
 ## Part 3
 Page: [Mapping the Elements Together](https://jennaepstein.github.io/MUSA550-finalproject/part3-folium-map/)
 
-Using the results from parts 1 and 2, I then created a map using [Folium](https://python-visualization.github.io/folium/) to showing the centers and the walkable street network. The map includes a layer control toggle, allowing useres to switch between different overlays for population density and social vulnerability, as well as toggle on/off the base layers of hurricane evacuation zones (proxy for hurricane flooding and other stormwater-relate4d risks), and accessible nodes (a half mile or less from the nearest evacuation center).
+Using the results from parts 1 and 2, I then created a map using [Folium](https://python-visualization.github.io/folium/) to show the centers and the walkable street network. The map includes a layer control toggle, allowing users to switch between different overlays for population density and social vulnerability, as well as toggle on/off the base layers of hurricane evacuation zones (proxy for hurricane flooding and other stormwater-related risks), and accessible nodes (a half mile or less from the nearest evacuation center).
+
+The process of creating the folium map involved chaining facets of the map together using several blocks of `folium.GeoJson` for each part. It also involved creating a `folium.FeatureGroup` for the static base map layer to ensure that users would not be able to switch off the basemap for NYC. The full code that produced this map is provided in the Jupyter notebook in this project's GitHub repository called **folium_map_notebook.ipynb**.
 
