SVI box and whisker plots; folium map minor fixes

--- a/folium_map_notebook.ipynb
+++ b/folium_map_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
        "4 -73.973425  40.774267  1233.833008  POINT (-73.97343 40.77427)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "5  MULTIPOLYGON (((-74.23826 40.50402, -74.23934 ...  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,16 +238,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# just zone 1\n",
     "hurricane_evac_zone1 = hurricane_evac_zones.loc[(hurricane_evac_zones[\"Zone\"] == \"1\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,21 +298,23 @@
        "0  MULTIPOLYGON (((-74.21178 40.50819, -74.21179 ...  "
       ]
      },
-     "execution_count": 136,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# confirm\n",
     "hurricane_evac_zone1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define master aesthetic functions\n",
     "def get_tract_style(feature):\n",
     "    \"\"\"Return a style dict.\"\"\"\n",
     "    return {\"weight\": 2, \"color\": \"white\"}\n",
@@ -329,23 +332,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.colors as mcolors\n",
     "# use a reversed viridis color scheme for consistency\n",
-    "cmap = plt.get_cmap('viridis_r')\n",
-    "\n",
-    "cmap3 = plt.get_cmap('Reds_r')"
+    "cmap = plt.get_cmap('viridis_r')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define style function for SVI Overall\n",
     "def get_style1(feature):\n",
     "    # get the data value from the feature\n",
     "    value = feature['properties']['SVI_Overall']\n",
@@ -363,21 +365,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# normalize pop density column - very skewed\n",
+    "# Normalize pop density column - very skewed\n",
     "x = merged_NYC_tracts_SVI['Population_Density']\n",
     "merged_NYC_tracts_SVI['Population_Density_normalized'] = (x - x.min()) / (x.max() - x.min())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define style function for Population Density\n",
+    "\n",
     "def get_style2(feature):\n",
     "    # get the data value from the feature\n",
     "    value = feature['properties']['Population_Density_normalized']\n",
@@ -395,44 +399,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# convert to json\n",
+    "# Convert to json\n",
     "nodes_NYC_halfmile_json = nodes_NYC_halfmile.to_json()\n",
     "merged_NYC_tracts_SVI_json = merged_NYC_tracts_SVI.to_json()\n",
-    "hurricane_evac_zones_json = hurricane_evac_zones.to_json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "hurricane_evac_zones_json = hurricane_evac_zones.to_json()\n",
     "hurricane_evac_zone1_json = hurricane_evac_zone1.to_json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Define style for hurricane evac zone 1\n",
     "style3 = {'fillColor': '#D22B2B', 'color': '#D22B2B', 'weight': 0, 'fillOpacity':0.9}    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# MAP\n",
     "map_master = folium.Map(\n",
     "    location=[40.71, -74.00],\n",
     "    tiles=None,\n",
-    "    zoom_start=11.5\n",
+    "    zoom_start=11.25\n",
     ")\n",
     "\n",
     "base_map = folium.FeatureGroup(name='Basemap', overlay=True, control=False)\n",
@@ -487,12 +485,12 @@
     "\n",
     "\n",
     "# avoid a rendering bug by saving as HTML and re-loading\n",
-    "map_master.save('map_master.html')"
+    "map_master.save('folium_map_final.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -502,150 +500,26 @@
        "        <iframe\n",
        "            width=\"800\"\n",
        "            height=\"600\"\n",
-       "            src=\"map_master.html\"\n",
+       "            src=\"folium_map_final.html\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f52e9eb550>"
+       "<IPython.lib.display.IFrame at 0x23d929833a0>"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import IFrame # loads HTML files\n",
-    "filepath = 'map_master.html'\n",
+    "filepath = 'folium_map_final.html'\n",
     "map_master.save(filepath)\n",
-    "IFrame(filepath, width=800, height=600)\n",
-    "\n",
-    "#IFrame('map_SVI_PopDens.html', width=800, height=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#ATTEMPT points addition\n",
-    "\n",
-    "master_map_test = map_SVI_PopDens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nodes_NYC_under2000.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "folium.GeoJson(\n",
-    "    nodes_NYC_under2000,\n",
-    "    control = False,\n",
-    "    marker = folium.CircleMarker(radius = 3,\n",
-    "                                 weight = 0,\n",
-    "                                 fill_color = '#000000',\n",
-    "                                 fill_opacity = 1)\n",
-    "                                 ).add_to(master_map_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# THIS WHOLE BLOCK TAKES FOREVER RIGHT  NOW\n",
-    "from IPython.display import IFrame # loads HTML files\n",
-    "filepath = 'master_map_test1.html'\n",
-    "master_map_test.save(filepath)\n",
-    "IFrame(filepath, width=800, height=600)\n",
-    "\n",
-    "#IFrame('master_map_test1.html', width=800, height=500)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "master_map_test2 = map_SVI_PopDens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for _, r in nodes_NYC_under2000.iterrows():\n",
-    "    lat = r['geometry'].y\n",
-    "    lon = r['geometry'].x\n",
-    "    folium.Marker(location=[lat, lon]).add_to(master_map_test2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this is the layer that eventually gets added to Map\n",
-    "points_layer = folium.FeatureGroup(name='Accessible Nodes', show=False)\n",
-    "\n",
-    "# load GEOJSON, but don't add it to anything\n",
-    "nodes_points = folium.GeoJson(nodes_NYC_under2000)\n",
-    "\n",
-    "# iterate over GEOJSON features, pull out point coordinates, make Markers and add to layer\n",
-    "for feature in nodes_points.data['features']:\n",
-    "    if feature['geometry']['type'] == 'Point':\n",
-    "        folium.CircleMarker(location=list(reversed(feature['geometry']['coordinates']))\n",
-    "                          ).add_to(points_layer)\n",
-    "\n",
-    "points_layer.add_to(master_map_test2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# THIS WHOLE BLOCK TAKES FOREVER RIGHT  NOW\n",
-    "from IPython.display import IFrame # loads HTML files\n",
-    "filepath = 'master_map_test2.html'\n",
-    "master_map_test2.save(filepath)\n",
-    "IFrame(filepath, width=800, height=600)\n",
-    "\n",
-    "#IFrame('master_map_test2.html', width=800, height=500)"
+    "IFrame(filepath, width=800, height=600)"
    ]
   }
  ],
