--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -11,7 +11,7 @@ Page: [Project Overview](https://jennaepstein.github.io/MUSA550-finalproject/ove
 
 The data for hurricane evacuation centers, hurricane evacuation zones, and NYC boroughs was downloaded from New York City's open data portal, [NYC OpenData](https://opendata.cityofnewyork.us/). I performed some spatial joins to associate boroughs with centers and zones.
 
-I used altair to create the contextual map and bar plot shown on the Project Overview page.
+I used [altair](https://altair-viz.github.io/) to create the contextual map and bar plot shown on the Project Overview page.
 
 
 ## Part 1
@@ -19,7 +19,7 @@ Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://
 
 Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using [Cenpy](http://cenpy-devs.github.io/cenpy/index.html). The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
 
-The CDC/ATSDR Social Vulnerability Index (SVI) uses 15 US Census variables to determine the social vulnerability of every census tract. The SVI can help public health officials, City personnel, and planners hel prepare for and resond to disaster events - like hurricanes and tropical storms.I therefore elected to use SVI data in this project since it already encompasses the demographic and socioeonimc variables in the Census that I sought to factor into my analysis. I downloaded the SVI data directly from the CDC for the entirety of New York State. I then filtered the data down to the five counties (which correspond to the five boroughs) of New York City, performed much data cleanup, and joined this data with the census data based on unique census tract IDs.
+The CDC/ATSDR Social Vulnerability Index (SVI) uses 15 US Census variables to determine the social vulnerability of every census tract. The SVI can help public health officials, City personnel, and planners help prepare for and respond to disaster events - like hurricanes and tropical storms. I therefore elected to use SVI data in this project since it already encompasses the demographic and socioeconomic variables in the Census that I sought to factor into my analysis. I downloaded the SVI data directly from the CDC for the entirety of New York State. I then filtered the data down to the five counties (which correspond to the five boroughs) of New York City, performed extensive data cleanup, and joined this data with the census data based on unique census tract IDs.
 
 I used a combination of altair and matplotlib for the various visualizations to explore spatial relationships.
 
@@ -30,11 +30,9 @@ Page: [Evaluating Accessibility with a Pandas Network Analysis](https://jennaeps
 Part 2 of this project centered around a [Pandana](http://udst.github.io/pandana/) network analysis to explore walking access to evacuation centers from each intersection. Main steps included:
 * Creating a pandanas network 
 * Loading data for the walkable street network using [OSMnx](https://osmnx.readthedocs.io/en/stable/) and adding locations of the hurricane evacuation centers to the network
-* Plotting the walking distance to the nearest center with a maximum distance of 2000 meters
-
-In order to construct the plots (both the static and the interactive versions), I performed the following:
-- For each point on the walking street network, used `network_nearest_poi` to obtain distances from the nodes to the nearest evacuation center.
-- Merged coordinates of the network nodes with obtained distances to the nearest centers (meters)
+* Plotting the walking distance to the nearest center with a maximum distance of 2000 meters, which involved:
+- For each point on the walking street network, I used `network_nearest_poi` to obtain distances from the nodes to the nearest evacuation center.
+- I merged coordinates of the network nodes with obtained distances to the nearest centers (in meters by default)
 
 ## Part 3
 Page: [Mapping the Elements Together](https://jennaepstein.github.io/MUSA550-finalproject/part3-folium-map/)
@@ -43,3 +41,4 @@ Using the results from parts 1 and 2, I then created a map using [Folium](https:
 
 The process of creating the folium map involved chaining facets of the map together using several blocks of `folium.GeoJson` for each part. It also involved creating a `folium.FeatureGroup` for the static base map layer to ensure that users would not be able to switch off the basemap for NYC. The full code that produced this map is provided in the Jupyter notebook in this project's GitHub repository called **folium_map_notebook.ipynb**.
 
+**Next: [Part 1](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/)**
