title adjustments and consistency

--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -15,7 +15,7 @@ I used [altair](https://altair-viz.github.io/) to create the contextual map and 
 
 
 ## Part 1
-Page: [Exploratory Analysis: Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/)
+Corresponding Page: [Part 1: Exploratory Analysis of Population Density & Social Vulnerability](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/)
 
 Part 1 of this project involved conducting an exploratory analysis on demographic data (population) and social vulnerability. Tabular data for the population variable for each census tract - as well as the geometries for each tract - were extracted from the US Census using [Cenpy](http://cenpy-devs.github.io/cenpy/index.html). The population density variable was calculated using the total population estimate and the total land area estimate for each tract.
 
@@ -25,7 +25,7 @@ I used a combination of altair and matplotlib for the various visualizations to 
 
 
 ## Part 2
-Page: [Evaluating Accessibility with a Pandas Network Analysis](https://jennaepstein.github.io/MUSA550-finalproject/part2-accessibility-to-centers/)
+Corresponding Page: [Part 2: Evaluating Accessibility to Hurricane Evacuation Centers](https://jennaepstein.github.io/MUSA550-finalproject/part2-accessibility-to-centers/)
 
 Part 2 of this project centered around a [Pandana](http://udst.github.io/pandana/) network analysis to explore walking access to evacuation centers from each intersection. Main steps included:
 * Creating a pandanas network 
@@ -34,8 +34,10 @@ Part 2 of this project centered around a [Pandana](http://udst.github.io/pandana
     - For each point on the walking street network, I used `network_nearest_poi` to obtain distances from the nodes to the nearest evacuation center.
     - I merged coordinates of the network nodes with obtained distances to the nearest centers (in meters by default)
 
+>The code for all data wrangling, exploratory analysis, visualizations, and network analysis is provided in the Jupyter notebook in this project’s GitHub repository called **finalproject_EDA_networkanalysis.ipynb**
+
 ## Part 3
-Page: [Mapping the Elements Together](https://jennaepstein.github.io/MUSA550-finalproject/part3-folium-map/)
+Corresponding Page: [Part 3: Mapping the Elements Together](https://jennaepstein.github.io/MUSA550-finalproject/part3-folium-map/)
 
 Using the results from parts 1 and 2, I then created a map using [Folium](https://python-visualization.github.io/folium/) to show the centers and the walkable street network. The map includes a layer control toggle, allowing users to switch between different overlays for population density and social vulnerability, as well as toggle on/off the base layers of hurricane evacuation zones (proxy for hurricane flooding and other stormwater-related risks), and accessible nodes (a half mile or less from the nearest evacuation center).
 
