formatting Next links to h2

--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -43,4 +43,4 @@ Using the results from parts 1 and 2, I then created a map using [Folium](https:
 
 The process of creating the folium map involved chaining facets of the map together using several blocks of `folium.GeoJson` for each part. It also involved creating a `folium.FeatureGroup` for the static base map layer to ensure that users would not be able to switch off the basemap for NYC. The full code that produced this map is provided in the Jupyter notebook in this project's GitHub repository called **folium_map_notebook.ipynb**.
 
-**Next: [Part 1](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/)**
+## Next: [Part 1](https://jennaepstein.github.io/MUSA550-finalproject/part1-exploratory-analysis/)
