adding back in the boroughs map description

--- a/_posts/2021-12-22-methods.md
+++ b/_posts/2021-12-22-methods.md
@@ -26,6 +26,8 @@ The **[CDC/ATSDR Social Vulnerability Index (SVI)](https://www.atsdr.cdc.gov/pla
     - Performed a `groupby()` by borough, calculated `size()`, and used **altair** to produce the chart
 * Histogram of population density across NYC
     - Used **altair** to create the chart using `count()` for the y-axis
+* Map of the five NYC boroughs
+    - Used **matplotlib** to create the map
 * Choropleth map of population density across NYC
     - Used **hvPlot** to create the chart with crs=3857, which also included a custom tooltip using **Bokeh's HoverTool** customization and formatting options
 * Choropleth map of overall SVI across NYC
